k8s/prod/bootstrap/access/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - secure-backend.my-portfolio.it
      secretName: mysecret
  rules:
    - host: secure-backend.my-portfolio.it
      http:
        paths:
          - path: /prod/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: apigw
                port:
                  number: 8443
